compiler/testData/diagnostics/testsWithStdLib/annotations/publicField/publicFieldOnDelegatedProperty.kt
class C {
    private <!INAPPLICABLE_PUBLIC_FIELD!>@publicField<!> val a: String by kotlin.properties.Delegates.lazy { "A" }
}